# hybrid_actuator_data_collect

./: .gitignore  CMakeLists.txt  LICENSE  README.md
design_scripts/: filter_torque.py  plot.py  plot_hysteresis.py  requirements.txt
src/: CMakeLists.txt  csv.c  csv.h  exp_params.h  hyb_data_collect.c  lag_buffer.h  lti_sys.h
